Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.

~~~~~~~~~~~~0.0.1 Revitalize 11-24-2022 xx.xx P.M~~~~~~~~~~~~~~
~Renamed the ItemIds folder to be Ids for future use cases.
    ~This means the SDV Revitalize tool also had some string values update accordingly as well.
+Added in the BurnerGenerator code and a placeholder graphic in the meantime.

~~~~~~~~~~~~0.0.1 Revitalize 11-24-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added in Advanced, Delux, and Superior Charcoal kilns that turn wood into coal and better rates. Unlocked with higher forging levels and by collecting golden walnuts. Sold by Clint.
~Fixed a glitch where Geode crushers were always consuming fuel charges, this consuming more fuel items even when not operating.
+Cleaned up some code related to machines to make it easier to understand the flow as well as to interface for automate compatibility.
+Added automate compatibility for the geode crushers
+Added automate compatibilityb for the charcoal kilns
~Rewrote much of the logic related to automatce compatibility in the compatibility mod to be able to much easier add compatibility at least for new machines, in the future.
+Added in automate compatibility for the mining drill.
+Added in automate compatibility for ResoruceBushes
~Rewrote some code on ResourceBushes to support Automate compatibility.
~Added new draw methods to choose whether or not to draw the held object for an item.

~~~~~~~~~~~~0.0.1 Revitalize 11-22-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed crash on displaying strings for Mining Drill Blueprints
+Added in more advanced Geode Crushers! Blueprints can be unlocked by cracking 200, 500, 750, and 1000 geodes respectively via the mail! More advanced versions can also crack artifact troves and golden coconuts!
~Reduced the amount of time AdvancedGeodeCrushers take to process.
+Clint now sells the advanced geode crusher blueprints on the odd off case that the ones sent in the mail are lost somehow.
