@@ -1,0 +1,15 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Omegasis.Revitalize.Framework.Constants.CraftingIds.RecipeIds
+{
+    /// <summary>
+    /// A list of recipe ids that are added for the anvil.
+    /// </summary>
+    public class AnvilRecipeIds
+    {
+    }
+}
