@@ -12,36 +12,38 @@ namespace Omegasis.Revitalize.Framework.Constants.CraftingIds.RecipeIds
     /// </summary>
     public class WorkbenchRecipeIds
     {
-        public static string AnvilRecipeId = "Revitalize.Workbench.CraftingStations.Anvil";
+        public const string AnvilRecipeId = "Revitalize.Workbench.CraftingStations.Anvil";
 
-        public static string ElectricFurnaceRecipeId = "Revitalize.Workbench.Machines.Furnaces.ElectricFurnace";
-        public static string NuclearFurnaceRecipeId = "Revitalize.Workbench.Machines.Furnaces.NuclearFurnace";
-        public static string MagicalFurnaceRecipeId = "Revitalize.Workbench.Machines.Furnaces.MagicalFurnace";
+        public const string ElectricFurnaceRecipeId = "Revitalize.Workbench.Machines.Furnaces.ElectricFurnace";
+        public const string NuclearFurnaceRecipeId = "Revitalize.Workbench.Machines.Furnaces.NuclearFurnace";
+        public const string MagicalFurnaceRecipeId = "Revitalize.Workbench.Machines.Furnaces.MagicalFurnace";
 
-        public static string CoalMiningDrillRecipeId = "Revitalize.Workbench.Machines.MiningDrills.CoalMiningDrill";
-        public static string ElectricMiningDrillRecipeId = "Revitalize.Workbench.Machines.MiningDrills.ElectricMiningDrill";
-        public static string NuclearMiningDrillRecipeId = "Revitalize.Workbench.Machines.MiningDrills.NuclearMiningDrill";
-        public static string MagicalMiningDrillRecipeId = "Revitalize.Workbench.Machines.MiningDrills.MagicalMiningDrill";
+        public const string CoalMiningDrillRecipeId = "Revitalize.Workbench.Machines.MiningDrills.CoalMiningDrill";
+        public const string ElectricMiningDrillRecipeId = "Revitalize.Workbench.Machines.MiningDrills.ElectricMiningDrill";
+        public const string NuclearMiningDrillRecipeId = "Revitalize.Workbench.Machines.MiningDrills.NuclearMiningDrill";
+        public const string MagicalMiningDrillRecipeId = "Revitalize.Workbench.Machines.MiningDrills.MagicalMiningDrill";
 
         //Geode Crushers
-        public static string AdvancedGeodeCrusher = "Revitalize.Workbench.Machines.GeodeCrushers.AdvancedGeodeCrusher";
-        public static string ElectricGeodeCrusher = "Revitalize.Workbench.Machines.GeodeCrushers.ElectricGeodeCrusher";
-        public static string NuclearGeodeCrusher = "Revitalize.Workbench.Machines.GeodeCrushers.NuclearGeodeCrusher";
-        public static string MagicalGeodeCrusher = "Revitalize.Workbench.Machines.GeodeCrushers.MagicalGeodeCrusher";
+        public const string AdvancedGeodeCrusher = "Revitalize.Workbench.Machines.GeodeCrushers.AdvancedGeodeCrusher";
+        public const string ElectricGeodeCrusher = "Revitalize.Workbench.Machines.GeodeCrushers.ElectricGeodeCrusher";
+        public const string NuclearGeodeCrusher = "Revitalize.Workbench.Machines.GeodeCrushers.NuclearGeodeCrusher";
+        public const string MagicalGeodeCrusher = "Revitalize.Workbench.Machines.GeodeCrushers.MagicalGeodeCrusher";
 
         //Charcoal Kilns
-        public static string AdvancedCharcoalKiln = "Revitalize.Workbench.Machines.CharcoalKilns.AdvancedCharcoalKiln";
-        public static string DeluxCharcoalKiln = "Revitalize.Workbench.Machines.CharcoalKilns.DeluxCharcoalKiln";
-        public static string SuperiorCharcoalKiln = "Revitalize.Workbench.Machines.CharcoalKilns.SuperiorCharcoalKiln";
+        public const string AdvancedCharcoalKiln = "Revitalize.Workbench.Machines.CharcoalKilns.AdvancedCharcoalKiln";
+        public const string DeluxCharcoalKiln = "Revitalize.Workbench.Machines.CharcoalKilns.DeluxCharcoalKiln";
+        public const string SuperiorCharcoalKiln = "Revitalize.Workbench.Machines.CharcoalKilns.SuperiorCharcoalKiln";
 
-        public static string IrrigatedWateringPotRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Farming.IrrigatedGardenPot";
-        public static string AutoPlanterIrrigatedWateringPotAttachmentRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Items.Farming.AutoPlanterGardenPotAttachment";
-        public static string AutoHarvesterIrrigatedWateringPotAttachmentRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Items.Farming.AutoHarvesterGardenPotAttachment";
-        public static string AutomatedFarmingSystemRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Farming.AdvancedFarmingSystem";
-        public static string HayMakerRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Farming.HayMaker";
+        public const string IrrigatedWateringPotRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Farming.IrrigatedGardenPot";
+        public const string AutoPlanterIrrigatedWateringPotAttachmentRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Items.Farming.AutoPlanterGardenPotAttachment";
+        public const string AutoHarvesterIrrigatedWateringPotAttachmentRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Items.Farming.AutoHarvesterGardenPotAttachment";
+        public const string AutomatedFarmingSystemRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Farming.AdvancedFarmingSystem";
+        public const string HayMakerRecipeId = "Revitalize.Workbench.Farming.Revitalize.Framework.World.Objects.Farming.HayMaker";
 
-        public static string RadioactiveFuelCellRecipeId = "Revitalize.Workbench.Items.Misc.RadioactiveFuel";
+        public const string RadioactiveFuelCellRecipeId = "Revitalize.Workbench.Items.Misc.RadioactiveFuel";
 
-        public static string BurnerGenerator = "Revitalize.Workbench.Machines.EnergyGeneration.BurnerGenerator";
+        //Generated code below this point.
+        public const string BurnerGenerator = "Revitalize.Workbench.Machines.EnergyGeneration.BurnerGenerator";
+		public const string NuclearGenerator = "Revitalize.Workbench.Machines.EnergyGeneration.NuclearGenerator";
     }
 }
