@@ -23,6 +23,7 @@ using Omegasis.Revitalize.Framework.Constants.PathConstants.Graphics;
 using Omegasis.Revitalize.Framework.Constants.PathConstants;
 using Omegasis.Revitalize.Framework.Content;
 using Omegasis.Revitalize.Framework.Constants.Ids.Objects;
+using Omegasis.Revitalize.Framework.Constants.Ids.Items;
 
 namespace Omegasis.Revitalize
 {
@@ -247,9 +248,11 @@ namespace Omegasis.Revitalize
 
               ModContentManager.objectManager.getItem(ResourceObjectIds.CoalBush,1),
                             ModContentManager.objectManager.getItem(MachineIds.BurnerGenerator,1),
+                            ModContentManager.objectManager.getItem(MachineIds.NuclearGenerator,1),
+             ModContentManager.objectManager.getItem(MachineIds.AdvancedCharcoalKiln,1),
+                            ModContentManager.objectManager.getItem(MiscItemIds.RadioactiveFuel,1),
                             ModContentManager.objectManager.getItem(Enums.SDVObject.Wood,100),
               ModContentManager.objectManager.getItem(Enums.SDVBigCraftable.Chest,3),
-                            ModContentManager.objectManager.getItem(Enums.SDVBigCraftable.CharcoalKiln,1),
               //ObjectManager.getItem(Enums.SDVBigCraftable.Furnace),
             });
 
